--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-dotenv": "^3.4.11",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.17.1",
