--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
-    "axios": "^1.8.3",
+    "axios": "^1.8.4",
     "expo": "~52.0.37",
     "expo-file-system": "^18.0.11",
-    "expo-image-picker": "^16.0.6",
+    "expo-image-picker": "~16.0.6",
     "expo-media-library": "^17.0.6",
     "expo-sharing": "^13.0.1",
     "expo-status-bar": "~2.0.1",
@@ -31,6 +31,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-image-picker": "^8.2.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^4.14.1",
